--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx'
 
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 }
